# nvJPEG_Wrapper

./: CMakeLists.txt  NVJpegDecoder.hpp  README.md  main (copy).cpp.b  main.cpp  main1.cpp
python_wrapper/: CMakeLists.txt  main.cpp  test.py
